<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/framelayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#e4e4e4" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal"
            android:background="@android:color/white">

            <ImageView
                android:id="@+id/iv_contact"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/contactImage"
                android:padding="10dp"
                android:src="@drawable/ic_question_answer_black_noclick" />

            <ImageView
                android:id="@+id/iv_infoPolicy"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/policyImage"
                android:padding="10dp"
                android:src="@drawable/ic_info_nonclick" />

            <ImageView
                android:id="@+id/iv_MainBook"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_weight="1"
                android:contentDescription="@string/mainBookImage"
                android:src="@drawable/book1" />

            <ImageView
                android:id="@+id/iv_Favorite"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/favoriteImage"
                android:padding="10dp"
                android:src="@drawable/ic_star_border" />

            <ImageView
                android:id="@+id/iv_History"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:contentDescription="@string/HistoryImage"
                android:padding="10dp"
                android:src="@drawable/ic_history_nonclick" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>