<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_id_fav"
        android:text="@string/tv_id_exam"
        android:textSize="12sp"
        android:textColor="@color/primaryText"
        android:layout_width="30dp"
        android:layout_height="match_parent"
        android:background="@color/greyborder"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:paddingTop="11dp"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="#FFFFFF">

        <TextView
            android:id="@+id/tv_title_fav"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textColor="@color/primaryText"
            android:gravity="center_vertical"
            android:textSize="12sp"
            android:text="@string/tv_title_exam"/>

        <TextView
            android:id="@+id/tv_content_fav"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/tv_content_exam"
            android:textSize="17sp"
            android:textColor="@color/primaryText"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center_vertical"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:background="#FFFFFF">

        <ImageView
            android:id="@+id/iv_trash_item"
            android:src="@drawable/ic_cancel_black_24dp"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/favorite_for_bookmar"/>

        <ImageView
            android:id="@+id/iv_copy_fav"
            android:src="@drawable/ic_content_copy"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            android:layout_below="@id/iv_trash_item"
            android:contentDescription="@string/favorite_for_bookmar"/>

    </RelativeLayout>

</LinearLayout>